--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = ../icecast-m4.git
 [submodule "src/common"]
 	path = src/common
-	url = ../icecast-common.git
+	url = https://github.com/Holzhaus/icecast-common.git
+	branch = cmake
