--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -29,6 +29,12 @@
 
 #include <stdarg.h>
 
+#ifdef LIBSHOUT_DLLEXPORT
+#define LIBSHOUT_DECLSPEC __declspec(dllexport)
+#else
+#define LIBSHOUT_DECLSPEC
+#endif
+
 #ifdef __cplusplus
 extern "C" {
 #endif
@@ -127,32 +133,32 @@ typedef int (*shout_callback_t)(shout_t *shout, shout_event_t event, void *userd
 /* ----------------[ Generic ]---------------- */
 
 /* initializes the shout library. Must be called before anything else */
-void shout_init(void);
+LIBSHOUT_DECLSPEC void shout_init(void);
 
 /* shuts down the shout library, deallocating any global storage. Don't call
  * anything afterwards */
-void shout_shutdown(void);
+LIBSHOUT_DECLSPEC void shout_shutdown(void);
 
 /* returns a static version string.  Non-null parameters will be set to the
  * value of the library major, minor, and patch levels, respectively */
-const char *shout_version(int *major, int *minor, int *patch);
+LIBSHOUT_DECLSPEC const char *shout_version(int *major, int *minor, int *patch);
 
 /* Allocates and sets up a new shout_t.  Returns NULL if it can't get enough
  * memory.  The returns shout_t must be disposed of with shout_free. */
-shout_t *shout_new(void);
+LIBSHOUT_DECLSPEC shout_t *shout_new(void);
 
 /* Free all memory allocated by a shout_t */
-void shout_free(shout_t *self);
+LIBSHOUT_DECLSPEC void shout_free(shout_t *self);
 
 /* Returns a statically allocated string describing the last shout error
  * to occur.  Only valid until the next libshout call on this shout_t */
-const char *shout_get_error(shout_t *self);
+LIBSHOUT_DECLSPEC const char *shout_get_error(shout_t *self);
 
 /* Return the error code (e.g. SHOUTERR_SOCKET) for this shout instance */
-int shout_get_errno(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_get_errno(shout_t *self);
 
 /* returns SHOUTERR_CONNECTED or SHOUTERR_UNCONNECTED */
-int shout_get_connected(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_get_connected(shout_t *self);
 
 
 /* ----------------[ Configuration ]---------------- */
@@ -161,28 +167,28 @@ int shout_get_connected(shout_t *self);
  * SHOUTERR_MALLOC */
 
 /* Connection parameters */
-int shout_set_host(shout_t *self, const char *host);
-const char *shout_get_host(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_host(shout_t *self, const char *host);
+LIBSHOUT_DECLSPEC const char *shout_get_host(shout_t *self);
 
-int shout_set_port(shout_t *self, unsigned short port);
-unsigned short shout_get_port(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_port(shout_t *self, unsigned short port);
+LIBSHOUT_DECLSPEC unsigned short shout_get_port(shout_t *self);
 
-int shout_set_agent(shout_t *self, const char *agent);
-const char *shout_get_agent(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_agent(shout_t *self, const char *agent);
+LIBSHOUT_DECLSPEC const char *shout_get_agent(shout_t *self);
 
 /* See SHOUT_TLS_* above */
-int shout_set_tls(shout_t *self, int mode);
-int shout_get_tls(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_tls(shout_t *self, int mode);
+LIBSHOUT_DECLSPEC int shout_get_tls(shout_t *self);
 
 /* Set the directory for CA certs. Default: operating system's default */
-int shout_set_ca_directory(shout_t *self, const char *directory);
-const char *shout_get_ca_directory(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_ca_directory(shout_t *self, const char *directory);
+LIBSHOUT_DECLSPEC const char *shout_get_ca_directory(shout_t *self);
 
 /* Set a CA cert file for checking. If you use a self signed server cert
  * you can pass this cert using this function for verification.
  * Default: operating system's default */
-int shout_set_ca_file(shout_t *self, const char *file);
-const char *shout_get_ca_file(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_ca_file(shout_t *self, const char *file);
+LIBSHOUT_DECLSPEC const char *shout_get_ca_file(shout_t *self);
 
 /* Set list of allowed ciphers.
  * This function should only be used in case of using an old libshout
@@ -191,37 +197,37 @@ const char *shout_get_ca_file(shout_t *self);
  * DO NOT SET THIS TO ANY FIXED VALUE. IF YOU USE THIS FUNCTION
  * EXPOSE IT TO THE USER. OTHERWISE YOU WILL HARM SECURITY.
  * Default: internal list of secure ciphers. */
-int shout_set_allowed_ciphers(shout_t *self, const char *ciphers);
-const char *shout_get_allowed_ciphers(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_allowed_ciphers(shout_t *self, const char *ciphers);
+LIBSHOUT_DECLSPEC const char *shout_get_allowed_ciphers(shout_t *self);
 
 /* Authentication parameters */
-int shout_set_user(shout_t *self, const char *username);
-const char *shout_get_user(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_user(shout_t *self, const char *username);
+LIBSHOUT_DECLSPEC const char *shout_get_user(shout_t *self);
 
-int shout_set_password(shout_t *, const char *password);
-const char *shout_get_password(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_password(shout_t *, const char *password);
+LIBSHOUT_DECLSPEC const char *shout_get_password(shout_t *self);
 
 /* Set a client certificate for TLS connections.
  * This must be in PEM format with both cert and private key in the same file.
  * Default: none. */
-int shout_set_client_certificate(shout_t *self, const char *certificate);
-const char *shout_get_client_certificate(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_client_certificate(shout_t *self, const char *certificate);
+LIBSHOUT_DECLSPEC const char *shout_get_client_certificate(shout_t *self);
 
 /* Mount parameters */
-int shout_set_mount(shout_t *self, const char *mount);
+LIBSHOUT_DECLSPEC int shout_set_mount(shout_t *self, const char *mount);
 const char *shout_get_mount(shout_t *self);
 
 /* Other parameters */
 /* takes a SHOUT_AI_xxxx argument */
-int shout_set_audio_info(shout_t *self, const char *name, const char *value);
-const char *shout_get_audio_info(shout_t *self, const char *name);
+LIBSHOUT_DECLSPEC int shout_set_audio_info(shout_t *self, const char *name, const char *value);
+LIBSHOUT_DECLSPEC const char *shout_get_audio_info(shout_t *self, const char *name);
 
 /* takes a SHOUT_META_xxxx argument */
-int shout_set_meta(shout_t *self, const char *name, const char *value);
-const char *shout_get_meta(shout_t *self, const char *name);
+LIBSHOUT_DECLSPEC int shout_set_meta(shout_t *self, const char *name, const char *value);
+LIBSHOUT_DECLSPEC const char *shout_get_meta(shout_t *self, const char *name);
 
-int shout_set_public(shout_t *self, unsigned int make_public);
-unsigned int shout_get_public(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_public(shout_t *self, unsigned int make_public);
+LIBSHOUT_DECLSPEC unsigned int shout_get_public(shout_t *self);
 
 /* Set the content language.
  * Values as per RFC5646 Section 2.1.
@@ -235,54 +241,54 @@ unsigned int shout_get_public(shout_t *self);
  *  A similar station in Switzerland would set this to "de-CH".
  *  A station with content in Portuguese, and Klingon should set this to "pt, tlh".
  */
-int shout_set_content_language(shout_t *self, const char *content_language);
-const char *shout_get_content_language(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_content_language(shout_t *self, const char *content_language);
+LIBSHOUT_DECLSPEC const char *shout_get_content_language(shout_t *self);
 
 /* Set the format of the content to send.
  * * format is one of SHOUT_FORMAT_xxxx.
  * * usage is a bit vector composed of SHOUT_USAGE_xxxx.
  * * codecs is NULL as of this version. Future versions will also support NULL.
  */
-int shout_set_content_format(shout_t *self, unsigned int format, unsigned int usage, const char *codecs);
-int shout_get_content_format(shout_t *self, unsigned int *format, unsigned int *usage, const char **codecs);
+LIBSHOUT_DECLSPEC int shout_set_content_format(shout_t *self, unsigned int format, unsigned int usage, const char *codecs);
+LIBSHOUT_DECLSPEC int shout_get_content_format(shout_t *self, unsigned int *format, unsigned int *usage, const char **codecs);
 
 /* takes a SHOUT_PROTOCOL_xxxxx argument */
-int shout_set_protocol(shout_t *self, unsigned int protocol);
-unsigned int shout_get_protocol(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_protocol(shout_t *self, unsigned int protocol);
+LIBSHOUT_DECLSPEC unsigned int shout_get_protocol(shout_t *self);
 
 /* Instructs libshout to use nonblocking I/O. Must be called before
  * shout_open (no switching back and forth midstream at the moment).
  * nonblocking is one of SHOUT_BLOCKING_xxx. */
-int shout_set_nonblocking(shout_t* self, unsigned int nonblocking);
-unsigned int shout_get_nonblocking(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_set_nonblocking(shout_t* self, unsigned int nonblocking);
+LIBSHOUT_DECLSPEC unsigned int shout_get_nonblocking(shout_t *self);
 
 
 /* ----------------[ Actions ]---------------- */
 
 /* Opens a connection to the server.  All parameters must already be set */
-int shout_open(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_open(shout_t *self);
 
 /* Closes a connection to the server */
-int shout_close(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_close(shout_t *self);
 
 /* Send data to the server, parsing it for format specific timing info */
-int shout_send(shout_t *self, const unsigned char *data, size_t len);
+LIBSHOUT_DECLSPEC int shout_send(shout_t *self, const unsigned char *data, size_t len);
 
 /* Send unparsed data to the server.  Do not use this unless you know
- * what you are doing. 
+ * what you are doing.
  * Returns the number of bytes written, or < 0 on error.
  */
-ssize_t shout_send_raw(shout_t *self, const unsigned char *data, size_t len);
+LIBSHOUT_DECLSPEC ssize_t shout_send_raw(shout_t *self, const unsigned char *data, size_t len);
 
 /* return the number of bytes currently on the write queue (only makes sense in
  * nonblocking mode). */
-ssize_t shout_queuelen(shout_t *self);
-  
+LIBSHOUT_DECLSPEC ssize_t shout_queuelen(shout_t *self);
+
 /* Puts caller to sleep until it is time to send more data to the server */
-void shout_sync(shout_t *self);
+LIBSHOUT_DECLSPEC void shout_sync(shout_t *self);
 
 /* Amount of time in ms caller should wait before sending again */
-int shout_delay(shout_t *self);
+LIBSHOUT_DECLSPEC int shout_delay(shout_t *self);
 
 
 /* ----------------[ MP3/AAC ONLY ]---------------- */
@@ -297,27 +303,27 @@ int shout_delay(shout_t *self);
  *   SHOUTERR_NOCONNECT
  *   SHOUTERR_SOCKET
  */
-int shout_set_metadata(shout_t *self, shout_metadata_t *metadata);
+LIBSHOUT_DECLSPEC int shout_set_metadata(shout_t *self, shout_metadata_t *metadata);
 
 /* Allocates a new metadata structure.  Must be freed by shout_metadata_free. */
-shout_metadata_t *shout_metadata_new(void);
+LIBSHOUT_DECLSPEC shout_metadata_t *shout_metadata_new(void);
 
 /* Free resources allocated by shout_metadata_t */
-void shout_metadata_free(shout_metadata_t *self);
+LIBSHOUT_DECLSPEC void shout_metadata_free(shout_metadata_t *self);
 
 /* Add a parameter to the metadata structure.
  * Returns:
  *   SHOUTERR_SUCCESS on success
  *   SHOUTERR_INSANE if self isn't a valid shout_metadata_t* or name is null
  *   SHOUTERR_MALLOC if memory can't be allocated */
-int shout_metadata_add(shout_metadata_t *self, const char *name, const char *value);
+LIBSHOUT_DECLSPEC int shout_metadata_add(shout_metadata_t *self, const char *name, const char *value);
 
 
 /* ----------------[ Advanced ]---------------- */
 /* Advanced. Do not use. */
 
-int shout_control(shout_t *self, shout_control_t control, ...);
-int shout_set_callback(shout_t *self, shout_callback_t callback, void *userdata);
+LIBSHOUT_DECLSPEC int shout_control(shout_t *self, shout_control_t control, ...);
+LIBSHOUT_DECLSPEC int shout_set_callback(shout_t *self, shout_callback_t callback, void *userdata);
 
 
 /* ----------------[ Obsolete ]---------------- */
@@ -325,24 +331,24 @@ int shout_set_callback(shout_t *self, shout_callback_t callback, void *userdata)
  * They may be removed with any future version.
  */
 
-int shout_set_name(shout_t *self, const char *name); // obsolete
-const char *shout_get_name(shout_t *self); // obsolete
+LIBSHOUT_DECLSPEC int shout_set_name(shout_t *self, const char *name); // obsolete
+LIBSHOUT_DECLSPEC const char *shout_get_name(shout_t *self); // obsolete
 
-int shout_set_url(shout_t *self, const char *url); // obsolete
-const char *shout_get_url(shout_t *self); // obsolete
+LIBSHOUT_DECLSPEC int shout_set_url(shout_t *self, const char *url); // obsolete
+LIBSHOUT_DECLSPEC const char *shout_get_url(shout_t *self); // obsolete
 
-int shout_set_genre(shout_t *self, const char *genre); // obsolete
-const char *shout_get_genre(shout_t *self); // obsolete
+LIBSHOUT_DECLSPEC int shout_set_genre(shout_t *self, const char *genre); // obsolete
+LIBSHOUT_DECLSPEC const char *shout_get_genre(shout_t *self); // obsolete
 
-int shout_set_description(shout_t *self, const char *description); // obsolete
-const char *shout_get_description(shout_t *self); // obsolete
+LIBSHOUT_DECLSPEC int shout_set_description(shout_t *self, const char *description); // obsolete
+LIBSHOUT_DECLSPEC const char *shout_get_description(shout_t *self); // obsolete
 
 /* takes a SHOUT_FORMAT_xxxx argument */
-int shout_set_format(shout_t *self, unsigned int format); // obsolete
-unsigned int shout_get_format(shout_t *self); // obsolete
+LIBSHOUT_DECLSPEC int shout_set_format(shout_t *self, unsigned int format); // obsolete
+LIBSHOUT_DECLSPEC unsigned int shout_get_format(shout_t *self); // obsolete
 
-int shout_set_dumpfile(shout_t *self, const char *dumpfile); // obsolete
-const char *shout_get_dumpfile(shout_t *self); // obsolete
+LIBSHOUT_DECLSPEC int shout_set_dumpfile(shout_t *self, const char *dumpfile); // obsolete
+LIBSHOUT_DECLSPEC const char *shout_get_dumpfile(shout_t *self); // obsolete
 
 #ifdef __cplusplus
 }
