Clean up target names and add ShoutConfig.cmake.in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
-project(libshout LANGUAGES C VERSION 2.4.5)
+project(Shout LANGUAGES C VERSION 2.4.5)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-add_library(libshout
+add_library(shout
     src/codec_opus.c
     src/codec_vorbis.c
     src/connection.c
@@ -18,9 +18,9 @@ add_library(libshout
     src/tls.c
     src/util.c
 )
-target_include_directories(libshout PRIVATE src src/common)
+target_include_directories(shout PRIVATE src src/common)
 
-target_compile_definitions(libshout
+target_compile_definitions(shout
     PRIVATE
         VERSION="${CMAKE_PROJECT_VERSION}"
         LIBSHOUT_MAJOR=${CMAKE_PROJECT_VERSION_MAJOR}
@@ -32,82 +32,82 @@ target_compile_definitions(libshout
 set(SHOUT_THREADSAFE 1)
 set(SHOUT_TLS 1)
 configure_file(include/shout/shout.h.in "${CMAKE_CURRENT_BINARY_DIR}/include/shout/shout.h" @ONLY)
-target_include_directories(libshout BEFORE PRIVATE include "${CMAKE_CURRENT_BINARY_DIR}/include")
+target_include_directories(shout BEFORE PRIVATE include "${CMAKE_CURRENT_BINARY_DIR}/include")
 
 # Required system dependencies
 find_package(Ogg REQUIRED)
-target_link_libraries(libshout PRIVATE Ogg::ogg)
+target_link_libraries(shout PRIVATE Ogg::ogg)
 find_package(Vorbis REQUIRED)
-target_link_libraries(libshout PRIVATE Vorbis::vorbis Vorbis::vorbisenc Vorbis::vorbisfile)
+target_link_libraries(shout PRIVATE Vorbis::vorbis Vorbis::vorbisenc Vorbis::vorbisfile)
 
 # Optional system dependencies
 find_package(OpenSSL)
 if(TARGET OpenSSL::SSL)
-    target_compile_definitions(libshout PRIVATE HAVE_OPENSSL)
-    target_link_libraries(libshout PRIVATE OpenSSL::SSL OpenSSL::Crypto)
+    target_compile_definitions(shout PRIVATE HAVE_OPENSSL)
+    target_link_libraries(shout PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 endif()
 
 option(SPEEX "Speex support" OFF)
 if(SPEEX)
-    target_sources(libshout src/codec_speex.c)
+    target_sources(shout src/codec_speex.c)
     # TODO: Add support for finding speex headers and linking
 endif()
 
 option(THEORA "Theora support" OFF)
 if(THEORA)
-    target_sources(libshout src/codec_theora.c)
+    target_sources(shout src/codec_theora.c)
     # TODO: Add support for finding theora headers and linking
     #find_package(unofficial-theora)
     #if(TARGET unofficial::theora::theora)
-    #    target_compile_definitions(libshout PRIVATE HAVE_THEORA)
-    #    target_link_libraries(libshout PRIVATE unofficial::theora::theora unofficial::theora::theoradec unofficial::theora::theoraenc)
+    #    target_compile_definitions(shout PRIVATE HAVE_THEORA)
+    #    target_link_libraries(shout PRIVATE unofficial::theora::theora unofficial::theora::theoradec unofficial::theora::theoraenc)
     #endif()
 endif()
 
 # Dependencies in common directory
 add_subdirectory(src/common/httpp)
-target_link_libraries(libshout PRIVATE icecast-httpp)
+target_link_libraries(shout PRIVATE icecast-httpp)
 add_subdirectory(src/common/net)
-target_link_libraries(libshout PRIVATE icecast-net)
+target_link_libraries(shout PRIVATE icecast-net)
 add_subdirectory(src/common/timing)
-target_link_libraries(libshout PRIVATE icecast-timing)
+target_link_libraries(shout PRIVATE icecast-timing)
 
 # Header files
 include(CheckIncludeFile)
 
 check_include_file(arpa/inet.h HAVE_ARPA_INET_H)
 if(HAVE_ARPA_INET_H)
-    target_compile_definitions(libshout PRIVATE HAVE_ARPA_INET_H)
+    target_compile_definitions(shout PRIVATE HAVE_ARPA_INET_H)
 endif()
 
 check_include_file(inttypes.h HAVE_INTTYPES_H)
 if(HAVE_INTTYPES_H)
-    target_compile_definitions(libshout PRIVATE HAVE_INTTYPES_H)
+    target_compile_definitions(shout PRIVATE HAVE_INTTYPES_H)
 endif()
 
 check_include_file(stdint.h HAVE_STDINT_H)
 if(HAVE_STDINT_H)
-    target_compile_definitions(libshout PRIVATE HAVE_STDINT_H)
+    target_compile_definitions(shout PRIVATE HAVE_STDINT_H)
 endif()
 
 check_include_file(strings.h HAVE_STRINGS_H)
 if(HAVE_STRINGS_H)
-    target_compile_definitions(libshout PRIVATE HAVE_STRINGS_H)
+    target_compile_definitions(shout PRIVATE HAVE_STRINGS_H)
 endif()
 
 check_include_file(sys/select.h HAVE_SYS_SELECT_H)
 if(HAVE_SYS_SELECT_H)
-    target_compile_definitions(libshout PRIVATE HAVE_SYS_SELECT_H)
+    target_compile_definitions(shout PRIVATE HAVE_SYS_SELECT_H)
 endif()
 
 check_include_file(sys/socket.h HAVE_SYS_SOCKET_H)
 if(HAVE_SYS_SOCKET_H)
-    target_compile_definitions(libshout PRIVATE HAVE_SYS_SOCKET_H)
+    target_compile_definitions(shout PRIVATE HAVE_SYS_SOCKET_H)
 endif()
 
 check_include_file(winsock2.h HAVE_WINSOCK2_H)
 if(HAVE_WINSOCK2_H)
-    target_compile_definitions(libshout PRIVATE HAVE_WINSOCK2_H)
+    target_compile_definitions(shout PRIVATE HAVE_WINSOCK2_H)
 endif()
 
 # Symbols
@@ -115,22 +115,46 @@ include(CheckSymbolExists)
 
 check_symbol_exists(strcasestr "string.h" HAVE_STRCASESTR)
 if(HAVE_STRCASESTR)
-    target_compile_definitions(libshout PRIVATE HAVE_STRCASESTR)
+    target_compile_definitions(shout PRIVATE HAVE_STRCASESTR)
 endif()
 
 check_symbol_exists(X509_check_host "openssl/x509v3.h" HAVE_X509_CHECK_HOST)
 if(HAVE_X509_CHECK_HOST)
-    target_compile_definitions(libshout PRIVATE XXX_HAVE_X509_check_host)
+    target_compile_definitions(shout PRIVATE XXX_HAVE_X509_check_host)
 endif()
 
+#
 # Installation / Packaging
+#
 include(GNUInstallDirs)
-install(TARGETS libshout
+include(CMakePackageConfigHelpers)
+
+# Library files
+install(TARGETS shout
     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
 )
+
+# Header files
 install(
     FILES "${CMAKE_CURRENT_BINARY_DIR}/include/shout/shout.h"
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/shout"
+)
+
+# CMake config
+configure_package_config_file(ShoutConfig.cmake.in
+    "${CMAKE_CURRENT_BINARY_DIR}/ShoutConfig.cmake"
+    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/Shout/cmake"
+    PATH_VARS CMAKE_INSTALL_LIBDIR
+)
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/ShoutConfigVersion.cmake"
+    VERSION "${CMAKE_PROJECT_VERSION}"
+    COMPATIBILITY SameMajorVersion
+)
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/ShoutConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/ShoutConfigVersion.cmake"
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/Shout/cmake"
 )
