--- a/include/shout/shout.h.in
+++ b/include/shout/shout.h.in
@@ -23,8 +23,13 @@
 #define __LIBSHOUT_SHOUT_H__
 
 #include <sys/types.h>
-#if defined(WIN32) && !defined(__MINGW64__) && !defined(__MINGW32__)
-#include <os.h>
+#ifdef _MSC_VER
+#include <basetsd.h>
+typedef __int64 int64_t;
+typedef unsigned __int64 uint64_t;
+typedef unsigned __int32 uint32_t;
+typedef __int32 int32_t;
+typedef SSIZE_T ssize_t;
 #endif
 
 #include <stdarg.h>
